hard-gists/5a5c3a6ad327f303cb915198aec8a90d/run.log
=== Docker Run Log for 5a5c3a6ad327f303cb915198aec8a90d ===
Started at: Mi 29. Okt 16:12:57 CET 2025

[2025-10-29 16:12:58] START: Running container for 5a5c3a6ad327f303cb915198aec8a90d
[2025-10-29 16:12:58] SUCCESS: Container 878d968c58b6f8f5e0f21c06db12a7f304613d2c0371bfbeec2790967edd1069 started for 5a5c3a6ad327f303cb915198aec8a90d
=== Container logs for 5a5c3a6ad327f303cb915198aec8a90d ===
  File "/snippet.py", line 56
    print rec.shots['01.jpg']
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5a5c3a6ad327f303cb915198aec8a90d ===
[2025-10-29 16:13:00] INFO: Container 878d968c58b6f8f5e0f21c06db12a7f304613d2c0371bfbeec2790967edd1069 has stopped
